--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run clean && webpack --mode production --config webpack.config.js",
     "start-node": "node dist/bundle.js",
     "start": "webpack serve --mode development --config webpack.config.js",
-    "all": "npm run build && npm run start"
+    "all": "npm run build && npm run start",
+    "dev": "tsc -w"
   },
   "author": "",
   "license": "ISC",
@@ -23,5 +24,9 @@
     "webpack": "^5.32.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0"
   }
 }
